fixed spacing between projects containers but now width needs to be dynamic

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -86,6 +86,10 @@ body {
 
   }
 
+  .project-grid {
+    padding: 0;
+  }
+
   .app-dashproject {
     min-height: calc(100% - 120px);
   }
@@ -94,7 +98,9 @@ body {
     margin: 75px 0px 75px 0px;
 
     .project-head {
-      height: 70px;
+      margin-top: 50px;
+      margin-bottom: 50px;
+      height: 49px;
       p {
         float: left;
         font-size: 1.9em;
@@ -111,11 +117,13 @@ body {
       }
     }
     .projects-container {
+      margin-left: 0;
+
       .project {
+        min-width:280px;
         border-radius: 4px;
         position: relative;
-        margin: 50px 20px 0px 20px;
-        width: 300px;
+        margin: 0 30px 80px 0;
         background-color: #ffffff;
         text-align: center;
         box-sizing: border-box;
@@ -162,7 +170,7 @@ body {
             font-size: 20px;
             font-weight: normal;
 
-            input{
+            input {
               text-align: center;
             }
           }
